ipc/ipdl/test/ipdl/ok/Punion_Basic.ipdl
union Basic {
    int;
    double;
};

sync protocol Punion_Basic {

parent:
    sync Msg(Basic p) returns (Basic r);

};
