ipc/ipdl/test/ipdl/error/unknownSyncMessage.ipdl
sync protocol unknownSyncMessage {
parent:
    sync Msg();
};
